--- a/base/mihomo-provider.yaml
+++ b/base/mihomo-provider.yaml
@@ -295,6 +295,7 @@ dns:
   respect-rules: true
   use-hosts: true
   nameserver-policy:
+    # ddns start
     +.zerozawa.top:
       - 119.29.29.29
       - 119.28.28.28
@@ -309,14 +310,19 @@ dns:
       - 139.9.23.9
       - 114.115.192.1
       - 116.205.5.1
+    # ddns end
     geosite:cn,apple-cn,category-games@cn,private,atlassian:
+      # isp dns
       - 218.2.2.2
       - 218.4.4.4
       - 240e:5b::6666
       - 240e:5a::6666
+      # isp dns
       - 1.2.4.8
       - 210.2.4.8
       - https://doh-pure.onedns.net/dns-query
+      - https://dns.alidns.com/dns-query
+      - https://doh.pub/dns-query
       - https://doh.360.cn/dns-query
       - 180.184.1.1
       - 180.184.2.2
